--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "simplest static-server with intercept-point for special case",
   "main": "index.js",
+  "bin": {"static-server":"index.js"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js 3000 hello.js"
